# openbot-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust-test.yml
install/: config.toml  docker-compose.yaml  install.sh  temp.env
src/: config.rs  main.rs
src/commands/misc/: help.rs  ping.rs
