[package]
name = "openbot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
poise = "0.5.5"
serde = {version = "1.0.180", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
toml = "0.7.6"
